--- a/front/index.html
+++ b/front/index.html
@@ -26,8 +26,14 @@
 
     <h2>Lista de Municípios</h2>
     <div id="listagem" class="container"></div>
-
-    
+    <div id="lista-alterar">
+        <h1>Alterar Minicipio</h1>
+        <p>Nome do município</p><input type="text" placeholder="nomeUf" id="nomeUf">
+        <p>Estado do município</p><input type="text" placeholder="estadoUf" id="estadoUf">
+        <p>Característica do município</p><input type="text" placeholder="CaracterísticaUf" id="caracUf">
+        <button id="btn-alterar">Alterar</button>
+        <button id="fechar-janela">Fechar</button>
+    </div>
 </body>
 
 </html>
